# Multiple-type-fields-on-Card-for-Anki-2.1

./: .gitignore  .pylintrc  Multiple_type_fields_on_card_2_1.ankiaddon  README.md  addon.json  multiple_type_fields_on_card_for_2_1.ankiaddon  pyproject.toml
Code/: Multiple_type_fields_on_card_for_2_1.py  manifest.json
src/multiple_type_fields_on_card_for_2_1/: Multiple_type_fields_on_card_for_2_1.py  __init__.py  manifest.json
